--- a/BestBoQ/BestBoQ/Web.config
+++ b/BestBoQ/BestBoQ/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <system.web>
+    <globalization culture="en-GB"/>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <pages>
