--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -155,6 +155,7 @@
     <Content Include="css\createproject.css" />
     <Content Include="css\inputmask.css" />
     <Content Include="css\main.css" />
+    <Content Include="css\pluton.css" />
     <Content Include="css\projectdetail.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
@@ -479,6 +480,9 @@
     <Content Include="CreateHomeNestedMaster.master" />
     <Content Include="fonts\THSarabunNew.ttf" />
     <Content Include="fonts\THSarabunNewBold.ttf" />
+    <Content Include="fonts\pluton.eot" />
+    <Content Include="fonts\pluton.ttf" />
+    <Content Include="fonts\pluton.woff" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Profile.aspx" />
