--- a/BestBoQ/BestBoQ/packages.config
+++ b/BestBoQ/BestBoQ/packages.config
@@ -25,5 +25,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Select.HtmlToPdf" version="17.3.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
