--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -524,6 +524,7 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="service.asmx" />
     <Content Include="Test.aspx" />
     <Content Include="TestHTMLtoPDF.aspx" />
     <Content Include="lib\DataTables\Buttons-1.5.1\css\buttons.bootstrap.css" />
@@ -903,6 +904,10 @@
     </Compile>
     <Compile Include="ReportChart.aspx.designer.cs">
       <DependentUpon>ReportChart.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="service.asmx.cs">
+      <DependentUpon>service.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Test.aspx.cs">
       <DependentUpon>Test.aspx</DependentUpon>
