--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -268,6 +268,8 @@
     <Content Include="Images\logo_new.png" />
     <Content Include="Images\MrBestBoQ.png" />
     <Content Include="Images\MrBestBoQ_Close.png" />
+    <Content Include="Images\MrBestBoQ_left.png" />
+    <Content Include="Images\MrBestBoQ_right.png" />
     <Content Include="Images\no_image.png" />
     <Content Include="Images\Sponsor\1.png" />
     <Content Include="Images\Sponsor\2.png" />
