--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -165,6 +165,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="FrogetPassword.aspx" />
     <Content Include="GenerateContract.aspx" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -851,6 +852,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FrogetPassword.aspx.cs">
+      <DependentUpon>FrogetPassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FrogetPassword.aspx.designer.cs">
+      <DependentUpon>FrogetPassword.aspx</DependentUpon>
     </Compile>
     <Compile Include="GenerateContract.aspx.cs">
       <DependentUpon>GenerateContract.aspx</DependentUpon>
