--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -513,6 +513,7 @@
     <Content Include="css\font\sukhumvitset-text-webfont.woff2" />
     <Content Include="css\font\DB Helvethaica X v3.2.ttf" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Profile.aspx" />
     <Content Include="Project_Detail.aspx" />
@@ -1013,6 +1014,12 @@
     <Content Include="lib\DataTables\Buttons-1.5.1\css\common.scss" />
     <Content Include="lib\DataTables\Buttons-1.5.1\css\mixins.scss" />
     <Content Include="templates\BestBOQ_contract.docm" />
+    <Content Include="templates\BestBOQ_boq.docm" />
+    <Content Include="templates\BestBOQ_PaymentTerm.docm" />
+    <Content Include="templates\BestBOQ_summary1.docm" />
+    <Content Include="templates\BestBOQ_summary2.docm" />
+    <Content Include="templates\BestBOQ_summary3.docm" />
+    <Content Include="templates\BestBOQ_timeplan.docx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
