--- a/BestBoQ/BestBoQ/packages.config
+++ b/BestBoQ/BestBoQ/packages.config
@@ -21,9 +21,11 @@
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="Select.HtmlToPdf" version="17.3.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
