--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -263,6 +263,7 @@
     <Content Include="Images\2Home\7.png" />
     <Content Include="Images\2Home\8.png" />
     <Content Include="Images\2Home\9.png" />
+    <Content Include="Images\Default\bottom_page.jpg" />
     <Content Include="Images\Default\home01.jpg" />
     <Content Include="Images\Default\home02.jpg" />
     <Content Include="Images\Default\home03.jpg" />
@@ -273,7 +274,44 @@
     <Content Include="Images\HowTo\NewProject3.jpg" />
     <Content Include="Images\HowTo\NewProject4.jpg" />
     <Content Include="Images\HowTo\PrintDocument1.jpg" />
+    <Content Include="Images\HowTo\PrintDocument10.jpg" />
+    <Content Include="Images\HowTo\PrintDocument11.jpg" />
+    <Content Include="Images\HowTo\PrintDocument12.jpg" />
+    <Content Include="Images\HowTo\PrintDocument13.jpg" />
+    <Content Include="Images\HowTo\PrintDocument14.jpg" />
+    <Content Include="Images\HowTo\PrintDocument15.jpg" />
+    <Content Include="Images\HowTo\PrintDocument16.jpg" />
+    <Content Include="Images\HowTo\PrintDocument17.jpg" />
+    <Content Include="Images\HowTo\PrintDocument18.jpg" />
+    <Content Include="Images\HowTo\PrintDocument19.jpg" />
     <Content Include="Images\HowTo\PrintDocument2.jpg" />
+    <Content Include="Images\HowTo\PrintDocument20.jpg" />
+    <Content Include="Images\HowTo\PrintDocument21.jpg" />
+    <Content Include="Images\HowTo\PrintDocument22.jpg" />
+    <Content Include="Images\HowTo\PrintDocument23.jpg" />
+    <Content Include="Images\HowTo\PrintDocument24.jpg" />
+    <Content Include="Images\HowTo\PrintDocument25.jpg" />
+    <Content Include="Images\HowTo\PrintDocument26.jpg" />
+    <Content Include="Images\HowTo\PrintDocument27.jpg" />
+    <Content Include="Images\HowTo\PrintDocument28.jpg" />
+    <Content Include="Images\HowTo\PrintDocument29.jpg" />
+    <Content Include="Images\HowTo\PrintDocument3.jpg" />
+    <Content Include="Images\HowTo\PrintDocument30.jpg" />
+    <Content Include="Images\HowTo\PrintDocument31.jpg" />
+    <Content Include="Images\HowTo\PrintDocument32.jpg" />
+    <Content Include="Images\HowTo\PrintDocument33.jpg" />
+    <Content Include="Images\HowTo\PrintDocument34.jpg" />
+    <Content Include="Images\HowTo\PrintDocument35.jpg" />
+    <Content Include="Images\HowTo\PrintDocument36.jpg" />
+    <Content Include="Images\HowTo\PrintDocument37.jpg" />
+    <Content Include="Images\HowTo\PrintDocument38.jpg" />
+    <Content Include="Images\HowTo\PrintDocument39.jpg" />
+    <Content Include="Images\HowTo\PrintDocument4.jpg" />
+    <Content Include="Images\HowTo\PrintDocument5.jpg" />
+    <Content Include="Images\HowTo\PrintDocument6.jpg" />
+    <Content Include="Images\HowTo\PrintDocument7.jpg" />
+    <Content Include="Images\HowTo\PrintDocument8.jpg" />
+    <Content Include="Images\HowTo\PrintDocument9.jpg" />
     <Content Include="Images\HowTo\Register1.jpg" />
     <Content Include="Images\HowTo\Register2.jpg" />
     <Content Include="Images\icon.png" />
